Bug 263947 - Cashew icon does not remember location after stop/start an activity
Summary: Cashew icon does not remember location after stop/start an activity
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: activities (other bugs)
Version First Reported In: 4.9.2
Platform: Ubuntu Linux
: LO minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2011-01-22 10:59 UTC by Robby Engelmann
Modified: 2012-10-06 07:32 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2011-01-22 10:59:12 UTC
Version:           unspecified (using KDE 4.5.95) 
OS:                Linux

The Cashew icon is placed in the upper right corner by default. I have my panel on the upper screen edge. Thus, cashew on its standard position is annoying and I place it left or right lower corner. After stopping und restarting an activity the cashew is placed back to the upper right.

Reproducible: Always

Steps to Reproduce:
-start an activity
-replace cashew to a place other than upper right
-stop activity
-start it again


Actual Results:  
--> cashew is placed back to upper right

Expected Results:  
cashew location should be remembered
Comment 1 S.Trzmiel 2011-03-13 15:19:48 UTC
I can confirm this behaviour, in fact proper steps to reproduce the problem are:

With morew than 1 activitiy created.
   1. move cashew to non-default location (bottom corners, left-side corners...)
   2. lock the desktop settings
   3. stop activity
   4. start activity.

Now cashew will be back to top-right corner.
With desktop settings unlocekd cashew stays in place when activity is resumed.
Comment 2 Simon Friis 2011-05-16 12:11:07 UTC
I can reproduce this behaviour in KDE 4.6.3 following Trzmiels steps.
Comment 3 Gregor Tätzner 2011-12-03 12:29:32 UTC
I can confirm it too (KDE 4.7.3). lowering priority
Comment 4 Robby Engelmann 2012-05-22 12:15:05 UTC
still valid for 4.8.3
Comment 5 Mark 2012-06-20 14:44:47 UTC
(In reply to comment #4)
> still valid for 4.8.3

Would you mind sharing how you reproduced this? I just tried to and it seems to be working just fine here. I'm running KDE 4.8.3 as well.
Comment 6 Robby Engelmann 2012-06-20 14:57:33 UTC
I see, one point was missing, here an update:

Steps to Reproduce: 
-start an activity 
-replace cashew to a place other than upper right (for that unlock widgets)
-lock widgets <-- (this was missing, as for leaving widgets unlocked it also worked for me)
-stop activity 
-start it again 

Actual Results: --> cashew is placed back to upper right 
Expected Results: cashew location should be remembered
Comment 7 Mark 2012-06-20 15:07:19 UTC
(In reply to comment #6)
> I see, one point was missing, here an update:
> 
> Steps to Reproduce: 
> -start an activity 
> -replace cashew to a place other than upper right (for that unlock widgets)
> -lock widgets <-- (this was missing, as for leaving widgets unlocked it also
> worked for me)
> -stop activity 
> -start it again 
> 
> Actual Results: --> cashew is placed back to upper right 
> Expected Results: cashew location should be remembered

That indeed works as described.
Comment 8 Gregor Tätzner 2012-10-06 07:32:02 UTC
Git commit 88d7dc41d845a512362b295a98e8e64510981a3d by Gregor Tätzner.
Committed on 05/10/2012 at 20:51.
Pushed by gregort into branch 'master'.

fixed position restoration of desktop toolbox

removed early exit, probably dead code
FIXED-IN: 4.9.3

REVIEW: 106743

M  +0    -7    plasma/desktop/toolboxes/internaltoolbox.cpp

http://commits.kde.org/kde-workspace/88d7dc41d845a512362b295a98e8e64510981a3d
Comment 9 Gregor Tätzner 2012-10-06 07:32:43 UTC
Git commit 00b5c46dbc2ddceeeb8f6d56af684ac1a89876f7 by Gregor Tätzner.
Committed on 05/10/2012 at 20:51.
Pushed by gregort into branch 'KDE/4.9'.

fixed position restoration of desktop toolbox

removed early exit, probably dead code
FIXED-IN: 4.9.3

REVIEW: 106743

M  +0    -7    plasma/desktop/toolboxes/internaltoolbox.cpp

http://commits.kde.org/kde-workspace/00b5c46dbc2ddceeeb8f6d56af684ac1a89876f7