fixed position restoration of desktop toolbox

removed early exit, probably dead code

BUG: 263947
FIXED-IN: 4.9.3

REVIEW: 106743